src/app.module.scss
:global(body) {
  font-family: 'Syne', sans-serif;
}

.container {
  position: fixed;
  inset: 0;
  overflow: hidden;
  z-index: 1;
}

.bouncingText {
  font-size: 3rem;
  font-weight: 300;
  white-space: nowrap;
  margin: 0;
  z-index: 1;
}

